force-app/main/default/objects/Lead_Interest__c/Lead_Interest__c.object-meta.xml
<CustomObject>
    <label>リード興味</label>
    <pluralLabel>リード興味</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <displayFormat>INT-{0000}</displayFormat>
        <label>興味番号</label>
    </nameField>
</CustomObject>