force-app/main/default/objects/Lead_Interest__c/fields/Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>Detected_Date__c</fullName>
    <label>検出日</label>
    <type>Date</type>
    <description>関心を検出した日付</description>
</CustomField>