force-app/main/default/objects/Lead_Interest__c/fields/Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level__c</fullName>
    <label>関心度</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <description>関心度（1〜100）</description>
</CustomField>