force-app/main/default/objects/Lead_Interest__c/fields/Interest_Topic__c.field-meta.xml
<CustomField>
    <fullName>Interest_Topic__c</fullName>
    <label>関心トピック</label>
    <required>true</required>
    <type>Picklist</type>
    <description>リードの関心領域トピック</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>データ統合</fullName>
            </value>
            <value>
                <fullName>業務効率化</fullName>
            </value>
            <value>
                <fullName>セキュリティ強化</fullName>
            </value>
            <value>
                <fullName>コスト削減</fullName>
            </value>
            <value>
                <fullName>DX 推進</fullName>
            </value>
            <value>
                <fullName>既存システム置き換え</fullName>
            </value>
            <value>
                <fullName>クラウド移行</fullName>
            </value>
            <value>
                <fullName>自動化</fullName>
            </value>
            <value>
                <fullName>AI 活用</fullName>
            </value>
            <value>
                <fullName>ガバナンス強化</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>