force-app/main/default/objects/Lead_Interest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>リード</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Interests</relationshipName>
    <relationshipLabel>興味領域</relationshipLabel>
    <description>このリード興味が紐づくリード。Lead は主従関係のマスターになれず、必須Lookupも削除制約の制約上不可のため任意Lookup（削除時SetNull）で実装。必須性はアプリ層（バリデーション）で担保する想定。</description>
</CustomField>