force-app/main/default/objects/Lead_Interest__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>補足メモ</description>
</CustomField>