force-app/main/default/objects/Lead_Interest__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>検出元</label>
    <length>255</length>
    <type>Text</type>
    <description>関心を検出した情報源</description>
</CustomField>